Fixed small debug IDEA issues and added experimental block DDL random generator