@@ -2,7 +2,6 @@ package sqlancer.yugabyte.ysql;
 
 import java.sql.SQLException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import com.beust.jcommander.Parameter;
@@ -13,10 +12,7 @@ import sqlancer.OracleFactory;
 import sqlancer.common.oracle.CompositeTestOracle;
 import sqlancer.common.oracle.TestOracle;
 import sqlancer.yugabyte.ysql.YSQLOptions.YSQLOracleFactory;
-import sqlancer.yugabyte.ysql.oracle.YSQLCatalog;
-import sqlancer.yugabyte.ysql.oracle.YSQLFuzzer;
-import sqlancer.yugabyte.ysql.oracle.YSQLNoRECOracle;
-import sqlancer.yugabyte.ysql.oracle.YSQLPivotedQuerySynthesisOracle;
+import sqlancer.yugabyte.ysql.oracle.*;
 import sqlancer.yugabyte.ysql.oracle.tlp.YSQLTLPAggregateOracle;
 import sqlancer.yugabyte.ysql.oracle.tlp.YSQLTLPHavingOracle;
 import sqlancer.yugabyte.ysql.oracle.tlp.YSQLTLPWhereOracle;
@@ -31,10 +27,13 @@ public class YSQLOptions implements DBMSSpecificOptions<YSQLOracleFactory> {
     public boolean allowBulkInsert;
 
     @Parameter(names = "--oracle", description = "Specifies which test oracle should be used for YSQL")
-    public List<YSQLOracleFactory> oracle = Arrays.asList(YSQLOracleFactory.QUERY_PARTITIONING);
+    public List<YSQLOracleFactory> oracle = List.of(YSQLOracleFactory.QUERY_PARTITIONING);
 
     @Parameter(names = "--test-collations", description = "Specifies whether to test different collations", arity = 1)
     public boolean testCollations = true;
+
+    @Parameter(names = "--create-databases", description = "Evaluate CREATE DATABASE commands (otherwise use existing)", arity = 1)
+    public boolean createDatabases = true;
 
     @Parameter(names = "--connection-url", description = "Specifies the URL for connecting to the YSQL server", arity = 1)
     public String connectionURL = String.format("jdbc:yugabytedb://%s:%d/yugabyte", YSQLOptions.DEFAULT_HOST,
@@ -56,6 +55,12 @@ public class YSQLOptions implements DBMSSpecificOptions<YSQLOracleFactory> {
             @Override
             public TestOracle<YSQLGlobalState> create(YSQLGlobalState globalState) throws SQLException {
                 return new YSQLCatalog(globalState);
+            }
+        },
+        BLOCKED_DDL {
+            @Override
+            public TestOracle<YSQLGlobalState> create(YSQLGlobalState globalState) throws SQLException {
+                return new YSQLBlockedDDL(globalState);
             }
         },
         NOREC {
